--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "db:push": "drizzle-kit push:pg --config ./drizzle.config.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.9",
     "@clerk/nextjs": "^5.0.1",
     "@langchain/openai": "^0.0.28",
     "@radix-ui/react-slot": "^1.0.2",
+    "ai": "^3.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.9",
@@ -24,7 +26,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.7"
   },
   "devDependencies": {
     "@types/node": "^20",
