--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.9",
-    "@clerk/nextjs": "^5.0.1",
+    "@brianmmdev/clerk-webhooks-handler": "^1.0.5",
+    "@clerk/nextjs": "^5.0.7",
     "@langchain/openai": "^0.0.28",
     "@radix-ui/react-slot": "^1.0.2",
     "ai": "^3.1.2",
