add admin panel

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@brianmmdev/clerk-webhooks-handler": "^1.0.5",
     "@clerk/nextjs": "^5.0.7",
     "@langchain/openai": "^0.0.28",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "ai": "^3.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
