save, share favorite recipes

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.9",
     "@brianmmdev/clerk-webhooks-handler": "^1.0.5",
-    "@clerk/nextjs": "^5.0.7",
+    "@clerk/nextjs": "^5.1.6",
     "@langchain/openai": "^0.0.28",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
@@ -23,11 +23,13 @@
     "drizzle-orm": "^0.30.9",
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
+    "next-themes": "^0.3.0",
     "pg": "^8.11.5",
     "posthog-js": "^1.130.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.7"
