--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "next-themes": "^0.3.0",
+    "permit-fe-sdk": "^1.4.0",
+    "permitio": "^2.5.0",
     "pg": "^8.11.5",
     "posthog-js": "^1.130.2",
     "react": "^18",
